# cx58-agent

./: .env  1  Cargo.toml  build.cmd  docker-compose.yml  tree  tree2
.cargo/: config.toml
.sqlx/: query-0eca2b373c17a318105048c087ce58d96082ef16a693d33ed07d715d58715676.json  query-1690d8acc95eace77559e2b7321d74c912a243030ff928f10bf89f63ff89bfda.json  query-2f34d5c5384b27ba52984ad037edbbcb6fc6435893d0bc6f9c72065c0deaf538.json  query-52332bcadd24dc30149a7a26a49b6db9d5ec49d0564ca067e76bc5e79196d715.json  query-703e6b1e56979b0abd94be8aa79ce3e05397601e0c7a006bd88322abf8688190.json  query-82e7d1f466ec499dfc57ec810b42d1731d891d737a04dc89e271c38625e2d0d1.json  query-a492b42f95709d012dbc26b36ff069ae96811a93d9e6ce17412fd701979aec48.json  query-b205a316996c469eae802dc3aed2531aae770f152256202b7adf8d188ed1e68f.json  query-cf061b7473d5ab108a31db6d31e720c96ba63f14964277e38567fc76e555ffc2.json
front/: 1.rs  2.rs  3.rs  4.rs
migrations/: 001_initial_schema.sql  01_initial_schema.sql  fill.sql
old/7/src/: lib.rs  main.rs  s3.rs  storage.rs
some/: agent.rs  models.rs  rig_integration.rs
src/: agent.rs  ai.rs  error.rs  handlers.rs  init.rs  lib.rs  main.rs  models.rs  rig_integration.rs  storage.rs  types.rs  up_s3.rs
src/agents/: chat_agent.rs  comparison_agent.rs  description_agent.rs  document_agent.rs  events.rs  helper.rs  lang.rs  master_agent.rs  mod.rs  object_agent.rs  prompt_context.rs  task_detector.rs
