[package]
name = "cx58-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
# Common dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Backend
axum = "0.8"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }
qdrant-client = "1.16"
rig-core = "0.26"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Additional
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
futures = "0.3"
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
aws-sdk-s3 = "1"
aws-config = "1"
bytes = "1"
mime_guess = "2"
sha2 = "0.10"
hex = "0.4"
image = "0.25"
base64 = "0.22"
