[package]
name = "cx58-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "chrono",
    "json",
    "migrate"
] }

# Redis
# redis = { version = "1", features = ["tokio-comp", "connection-manager"] }

# S3 Storage - ULTRA LIGHTWEIGHT! 🚀
# Only ~50KB + reqwest (~200KB) = Total ~250KB

rust-s3 = { version = "0.37", default-features = false, features = ["tokio-native-tls"] }

# AI/LLM
rig-core = "0.27"

# Utilities
uuid = { version = "1", features = ["serde", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3.6"
thiserror = "2.0.17"

# HTTP client (already needed for Ollama)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Image processing
image = "0.25"
mime_guess = "2"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Base64 for Ollama vision
base64 = "0.22"

# Config & logging
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"

# lang
fluent-bundle = "0.16.0"
unic-langid = "0.9.6"
schemars = "1.1.0"
aho-corasick = "1.1.4"
strum = "0.27.2"
strum_macros = "0.27.2"

[dev-dependencies]
tokio-test = "0.4"
